# blog

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jnidemo/: CMakeLists.txt  build.gradle
jnidemo/src/main/: AndroidManifest.xml
jnidemo/src/main/cpp/: com_example_test_jnitest_MainActivity.cpp  native-lib.cpp
looper/: build.gradle  proguard-rules.pro
looper/src/main/: AndroidManifest.xml
looper/src/main/java/iris_view/com/activity/: MainActivity.java  WorkActivity.java
looper/src/main/java/iris_view/com/msgqueue/: HandlerTest.java  LooperTest.java  MessageTest.java  ReceiveThread.java
looper/src/main/res/layout/: activity_main.xml
looper/src/main/res/values/: strings.xml
multhread/: build.gradle
multhread/src/main/: AndroidManifest.xml
multhread/src/main/cpp/: native-lib.cpp
multhread/src/main/res/values/: strings.xml
nativeactivity/: CMakeLists.txt  build.gradle
nativeactivity/src/androidTest/java/com/example/wk/myapplication/: ExampleInstrumentedTest.java
nativeactivity/src/main/: AndroidManifest.xml
nativeactivity/src/main/cpp/: NativeMain.cpp  NativeMain.h
nativeactivity/src/test/java/com/example/wk/myapplication/: ExampleUnitTest.java
threaddemo/: build.gradle
threaddemo/src/main/java/com/example/threaddemo/: TAG.java  (+3 more)
threaddemo/src/main/res/values/: strings.xml
threadlocal/: build.gradle
threadlocal/src/main/: AndroidManifest.xml
threadlocal/src/main/res/values/: strings.xml
(+16 files in other folders)
